<resources>
    <string name="app_name">Sign Language</string>
    <string name="no_camera_access">No camera access</string>
    <string name="letter_camera_task">Show this sign</string>
    <string name="letter_sign_task">Choose the right sign</string>
    <string name="sign_letter_task">What sign is this?</string>
    <string name="continue_button">Continue</string>
    <string name="new_sign_message">New sign!</string>
    <string name="lesson_exit_confirmation">Are you sure you want to exit the lesson? All progress will be lost.</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="start_lesson_button">Start lesson</string>
    <string name="english_sign_language">English Sign Language</string>
    <string name="reset_progress_button">Reset progress</string>
    <string name="progress_reset_message">Progress has been reset</string>
    <string name="showing_sign_message">You are showing %c</string>
    <string name="right_sign_message">Perfect!</string>
    <string name="signs">Signs</string>
    <string name="lesson_finished_message">Excellent!</string>
</resources>