<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.signlanguage.ui.lesson.exercises.letter_camera.LetterCameraExerciseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.lesson.exercises.letter_camera.LetterCameraExerciseFragment">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:layout_toStartOf="@+id/signText"
                android:text="@string/letter_camera_task"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signText"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"
                android:text="@{viewModel.rightAnswer}"
                android:textSize="40sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/view_group"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/message_frame_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:id="@+id/loading_camera_progress_bar"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:progress="1"
                android:visibility="@{viewModel.loadingVisibility}" />

            <TextView
                android:id="@+id/no_camera_access_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_camera_access"
                android:visibility="@{viewModel.cameraAccessErrorVisibility}" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/message_frame_layout"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/wrong_sign_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/wrong_sign"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/wrong_sign_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:text="@string/showing_sign_message" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/right_sign_image"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:src="@drawable/right_sign"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/right_sign_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:text="@string/right_sign_message"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </LinearLayout>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>